# toflat

./: MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
samples/: sample.ipynb
tests/: test_data.py
tests/data/: P34-14_01_GML.zip:Zone.Identifier  P34-14_06_GML.zip:Zone.Identifier  P34-14_13_GML.zip:Zone.Identifier  P34-14_25_GML.zip:Zone.Identifier  P34-14_32_GML.zip:Zone.Identifier  P34-14_39_GML.zip:Zone.Identifier  P34-14_41_GML.zip:Zone.Identifier  P34-14_47_GML.zip:Zone.Identifier  vk_dict.json
toflat/: __init__.py  toflat.py
toflat/data/: jgd2011_plane_rect_crs.geojson
