[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toflat"
version = "0.1"
description = "toflat: Japanese latlong to xy."
authors = [{name = "HideyukiO", email="hogawa098@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
keywords = ["plane_rectangle", "GIS"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    ]
dependencies = ["geopandas"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["toflat/data/*.geojson"]

[project.urls]
Repository = "https://github.com/mazarimono/toflat"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
    "pytest",
]